WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266357
[IFC][Ruby] Incorrect preferred width computation when <ruby> is present
https://bugs.webkit.org/show_bug.cgi?id=266357
Summary
[IFC][Ruby] Incorrect preferred width computation when <ruby> is present
alan
Reported
2023-12-13 10:40:14 PST
ssia
Attachments
Patch
(4.89 KB, patch)
2023-12-13 10:53 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(4.88 KB, patch)
2023-12-13 11:00 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(6.84 KB, patch)
2023-12-13 12:29 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(6.92 KB, patch)
2023-12-13 12:36 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(6.92 KB, patch)
2023-12-13 15:26 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2023-12-13 10:53:53 PST
Created
attachment 469019
[details]
Patch
Antti Koivisto
Comment 2
2023-12-13 10:57:15 PST
Comment on
attachment 469019
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=469019&action=review
> Source/WebCore/rendering/RenderBlockFlow.cpp:4704 > + rubyBaseMinimumMaximumWidthStack.append(std::make_pair(inlineMin, inlineMax));
I think you can alternatively just say std::pair { inlineMin, inlineMax }, make_pair is not necessary anymore.
alan
Comment 3
2023-12-13 11:00:53 PST
Created
attachment 469021
[details]
Patch
alan
Comment 4
2023-12-13 12:29:02 PST
Created
attachment 469022
[details]
Patch
alan
Comment 5
2023-12-13 12:36:55 PST
Created
attachment 469023
[details]
[fast-cq]Patch
alan
Comment 6
2023-12-13 15:26:53 PST
Created
attachment 469027
[details]
[fast-cq]Patch
EWS
Comment 7
2023-12-13 15:44:47 PST
Committed
272011@main
(fcb3a49fe8cd): <
https://commits.webkit.org/272011@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 469027
[details]
.
Radar WebKit Bug Importer
Comment 8
2023-12-13 15:45:17 PST
<
rdar://problem/119634971
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug