[IFC][Ruby] Incorrect preferred width computation when <ruby> is present https://bugs.webkit.org/show_bug.cgi?id=266357

Reviewed by Antti Koivisto.

Let's hold on to ruby base min/max width and make sure the associated annotation box's min/max values are taken into account.

* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::computeInlinePreferredLogicalWidths const):

Canonical link: https://commits.webkit.org/272011@main